--- a/_publications/2023-10-16-OOPSLA23.md
+++ b/_publications/2023-10-16-OOPSLA23.md
@@ -7,5 +7,5 @@ venue: 'OOPSLA 2023'
 citation: 'Amirmohammad Nazari*, Yifei Huang*, Roopsha Samanta, Arjun Radhakrishna, and Mukund Raghothaman. 2023. Explainable Program Synthesis by Localizing Specifications. Proc. ACM Program. Lang. 7, OOPSLA2, Article 298 (October 2023)'
 ---
 
-[Download paper here](http://www.yifei-h.com/files/paper1.pdf)
+[Download paper here](http://www.yifei-h.com/files/OOPSLA23.pdf)
 
